--- a/28-01-2025.md
+++ b/28-01-2025.md
@@ -1,1 +1,1 @@
-today i had a great day i learnt alot today about how to put things into a table by using html and css.
+today i had a great day i learnt alot today about how to put things into a table by using html and css.today i had a great day i learnt alot today about how to put things into a table by using html and css. I also learnt how to use macrons in my letters, and how to style the contents of my website by adding colour to the text and how to put the things of my website into the middle of the page.
